tests/baselines/reference/parserComputedPropertyName25.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName25.ts(3,5): error TS1166: Computed property names are not allowed in class property declarations.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName25.ts(3,6): error TS2304: Cannot find name 'e'.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName25.ts(4,6): error TS2304: Cannot find name 'e2'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName25.ts (3 errors) ====
    class C {
        // No ASI
        [e] = 0
        ~~~
!!! error TS1166: Computed property names are not allowed in class property declarations.
         ~
!!! error TS2304: Cannot find name 'e'.
        [e2] = 1
         ~~
!!! error TS2304: Cannot find name 'e2'.
    }